<?xml version="1.0" encoding="utf-8"?>
<resources>



    <string name="app_name">ANYRoShamBo</string>
    <string name="info_text">Special New Year edition of ANYRoShamBo will help you to have a lot of fun on a New Year’s day.
            To make the super-chooser work shake the device, or tap in the center of a triangle.
            Follow us, and we will gladden you with new interesting and exciting games.</string>
    <string name="info_header">Information</string>
    <string name="gamescreen_description">gamescreen</string>
    <string name="share_label_description">share_text</string>
    <string name="share_label">Share</string>

    <string name="go_party_text">Go! Party!</string>
    <string name="go_celebrate_text">Go! Celebrate!</string>
    <string name="go_forawalk_text">Go! For a walk!</string>

    <string name="about_main_url"><a href="http://appctek.com">http://appctek.com</a></string>
    <string name="about_vk_url"><a href="http://vk.com/appctek">http://vk.com/appctek</a></string>
    <string name="about_tw_url"><a href="http://twitter.com/appctek">http://twitter.com/appctek</a></string>
    <string name="about_ig_url"><a href="http://instagram.com/appctek">http://instagram.com/appctek</a></string>

    <!-- Useless contentDescription -->
    <string name="splash_content_description">ANYRoShamBo splash</string>
    <string name="info_button_description">info</string>
    <string name="vkontakte_button_description">vkontakte</string>
    <string name="odnoklassniki_button_description">odnoklassniki</string>
    <string name="facebook_button_description">facebook</string>
    <string name="twitter_button_description">twitter</string>
    <string name="triangle_description">triangle</string>
    <string name="walk_description">walk</string>
    <string name="drink_description">drink</string>
    <string name="party_description">party</string>
    <string name="glow_description">glow</string>
    <string name="go_for_description">go_for</string>

    <string name="share_text">Look! New Year killer-app! Don\&apos;t know what to do on holidays? Super-chooser will help!</string>
    <string name="share_action_text">Cool! New year killer-app ANYRoShambo suggested me to go %s! Join!</string>
    <string name="share_action_party">party</string>
    <string name="share_action_celebrate">celebrate</string>
    <string name="share_action_walk">for a walk</string>

    <string name="share_success">Share succeeds</string>
    <string name="share_duplicate">Already shared</string>
    <string name="share_error">Share failure</string>
    <string name="share_title">ANYRoShambo</string>
    <string name="share_link">http://appctek.com/</string>

    <string name="fb_app_id">184694715072939</string>

</resources>
