<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="360dp"
              android:layout_height="640dp">

    <ImageView
            android:layout_width="360dp"
            android:layout_height="640dp"
            android:src="@drawable/gamescreen"
            android:scaleType="matrix"
            android:contentDescription="@string/gamescreen_description"/>

    <TextView android:id="@+id/info_header"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/text_color"
              android:layout_marginTop="150dp"
              android:layout_marginBottom="10dp"
              android:gravity="center_horizontal"
              android:textSize="30sp"
              android:text="@string/info_header"/>

    <TextView android:id="@+id/info_text"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:textColor="@color/text_color"
              android:layout_below="@id/info_header"
              android:textSize="18sp"
              android:layout_marginLeft="10dp"
              android:layout_marginRight="10dp"
              android:text="@string/info_text"/>

</RelativeLayout>